# django_records

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
docs/: clean_architecture.md
examples/celestials/: README.md  pyproject.toml
examples/celestials/app/: app.py  factories.py  galaxy.py  models.py  tests.py
examples/celestials/project/: settings.py
src/django_records/: __init__.py  adjuncts.py  errors.py  handlers.py  records.py  tests.py
